--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
 [class*="col-"]{
    min-height: 80px;
   /* debug  */
-    /* border: 1px solid black; */
-   /* background-color: red; */
+   /* border: 1px solid black;
+   background-color: red; */
 
 }
 
@@ -29,7 +29,7 @@
 }
 
 /* background e border Sign Up */
-.btn-default {
+header .btn-default {
   color: #3285FF;
   background-color: #fff;
   border-color: #3285FF;
@@ -119,12 +119,38 @@
   padding: 0 30px;
 }
 
-button img{
+.padding-button-jumbotron button img{
   width: 30px;
 }
 
 /* color scritta button "Sign up.."  */
-.btn-default {
+ .btn-default {
   color: #CCCCCC;
   border-color: #CCCCCC;
+}
+
+
+/* INIZIO MAIN */
+
+/* main-section1 */
+.contenitore-main-section1{
+  background-color: #F3F5F9;
+}
+
+.contenitore-main-section1 span{
+  display: block;
+  text-align: center;
+  margin-top: 40px;
+  font-weight: bold;
+  color: #828CA4;
+}
+
+.contenitore-main-section1 span a{
+  text-decoration: none;
+  color: #1275FE;
+}
+
+.contenitore-main-section1 .row img{
+  display: block;
+  margin: 0 auto;
 }
