--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,61 @@
 
 }
 
+.position-fixed{
+  position:fixed;
+  width: 100%;
+  height:50px;
+  top: 0;
+  z-index: 900;
+
+
+}
+
+/* mediaquery  */
+
+@media all and (min-width: 768px) and (max-width: 992px) {
+    .navbar-collapse.collapse {
+    display: none!important;
+    }
+
+    .navbar-header{
+      width: 100%;
+    }
+
+    .navbar-toggle{
+      display: block;
+      margin-right: 0;
+    }
+
+}
+
+@media all and (max-width: 992px){
+  header>nav a{
+    width: 20%;
+  }
+}
+
+@media all and (min-width: 993px){
+  .navbar-header{
+    width: 20%;
+  }
+}
+
 /* header  */
+
+
 .navbar-default{
   background-color: white;
   border: 0;
+
 }
+
+/* color nav-bar */
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+  border-color: #e7e7e7;
+  background-color: white;
+}
+
 .logo{
   width: 150px;
   line-height: normal;
@@ -64,6 +114,7 @@ header .btn-default {
 /* Jumbotron */
 .contenitore-jumbotron{
   min-height: 300px;
+  margin-top:50px;     /* margine per non far sovrapporre header sul jumbotron */
   background-color:#004AFF;
   background-image: url(../img/jumbo.svg);
 }
