--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
    min-height: 80px;
   /* debug  */
    /* border: 1px solid black;
-   background-color: red; */
+  background-color: red; */
 
 }
 
@@ -172,6 +172,9 @@ header .btn-default {
 
 .padding-button-jumbotron button img{
   width: 30px;
+  /* display: inline-block;
+  margin-right: 80px;
+  margin-left: -120px; */
 }
 
 /* color scritta button "Sign up.."  */
@@ -204,4 +207,58 @@ header .btn-default {
 .contenitore-main-section1 .row img{
   display: block;
   margin: 0 auto;
+}
+
+/* main section2 */
+
+.text-title-section2{
+  text-align: center;
+  margin: 0 auto;
+
+}
+
+.text-title-section2 h2{
+  color: #031C4E;
+  font-weight: bold;
+  margin-top: 80px;
+}
+
+.text-title-section2 p{
+  color: #77829B;
+  font-weight: bold;
+  font-size: 21px;
+  margin-bottom: 40px;
+}
+
+.listato{
+  margin-top: 30px;
+}
+
+.listato ul li {
+  list-style: none;
+  border-left: 1px solid #7C879F;
+
+}
+
+.listato ul li a{
+  text-decoration: none;
+  color: #7C879F;
+  display: inline-block;
+  margin: 10px 0 5px 10px;
+}
+
+/* text-under-section2 */
+.text-under-section2 img{
+  display: block;
+  margin-top: 30px;
+}
+
+.text-under-section2 h3{
+  color:#031C4E;
+  font-weight: bold;
+}
+
+.text-under-section2 p{
+  font-weight: bold;
+
 }
