--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
    min-height: 80px;
   /* debug  */
     /* border: 1px solid black;
-  background-color: red; */
+  background-color: red;  */
 
 }
 
@@ -284,7 +284,7 @@ header .btn-default {
 }
 
 
-/* section3 */
+/* main section3 */
 
 .contenitore-section3{
   background-color: #F3F5F9;
@@ -336,17 +336,8 @@ header .btn-default {
 
 }
 
-/* margine pallini scorrimento */
-.contenitore-section3 .img-undertitle-section3 ol {
-  /* margin-top: 0; */
- margin-bottom: -105px;
 
-}
 
-/* Version mobile */
-.carousel-indicators {
- bottom: 0;
-}
 
 /* backgroundcolor freccia sinistra */
 .carousel-control.left{
@@ -361,7 +352,8 @@ header .btn-default {
   text-align: center;
   color: #031C4E;
   font-weight: bold;
-  margin-bottom: 90px;
+  margin: 30px 0;
+
 
 }
 
