--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
 [class*="col-"]{
    min-height: 80px;
   /* debug  */
-    /* border: 1px solid black;
-  background-color: red;  */
+  /* border: 1px solid black;
+  background-color: red; */
 
 }
 
@@ -22,6 +22,7 @@
 
 
 }
+
 
 /* mediaquery  */
 
@@ -391,4 +392,48 @@ header .btn-default {
   display: block;
   text-decoration: none;
   margin-bottom: 40px;
+}
+
+
+/* main section5 table */
+
+.title-mainsection5, .table{
+  background-color: #0032AE;
+}
+
+.title-mainsection5 h1{
+  text-align: center;
+  font-weight: bold;
+  color: white;
+}
+
+table{
+  margin-bottom: 50px;
+}
+
+.text-table{
+  border-bottom: 1px solid white;
+
+}
+
+.text-table td{
+  color: white;
+  padding: 10px 0;
+}
+
+.text-table td:first-child{
+  font-weight: bold;
+  padding-right: 10px;
+}
+
+.text-table td a{
+  color:#00A8C9;
+  text-decoration: none;
+  display: block;
+  text-align: right;
+}
+
+table tr:last-child{
+  border-bottom: none;
+
 }
