--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
    min-height: 80px;
   /* debug  */
   /* border: 1px solid black;
-  background-color: red; */
+  /* background-color: red;  */
 
 }
 
@@ -273,6 +273,7 @@ header .navbar-default .navbar-toggle .icon-bar {
 
 .click-global{
   margin-top: 20px;
+  margin-bottom: 90px;
 }
 .text-under-section2 h3{
   color:#031C4E;
@@ -282,6 +283,7 @@ header .navbar-default .navbar-toggle .icon-bar {
 .text-under-section2 p{
   font-weight: bold;
   color: #828CA4;
+
 
 }
 
